# machine-learning-from-scratch

./: .gitignore  README.md  temp
decision-tree/: DecisionTree  DecisionTree.h  Makefile  Node.h  decision-tree.cc  seals_test_c.csv  seals_train_c.csv
digit-classifier/: Dataset.h  Makefile  Matrix.h  NLayer.h  NNetwork.h  Vector.h  digit-classifier  digit-classifier.cc
image_triangulator/: .gitignore  Cargo.toml  README.md
image_triangulator/src/: algorithm.rs  image.rs  main.rs  mesh.rs  picture.rs  triangle.rs  utl.rs
maze_runner/: .gitignore  Cargo.toml  Makefile.toml  minimum_distance_paths.txt
maze_runner/src/: generator.rs  main.rs  plotter.py  solver.rs
orbit/: main.py  orbit.py
orbit/src/: constants.py  orbit.py  window.py
travel_flood_map/: .gitignore  main.py  map.py  testing.ipynb
