[package]
name = "image_triangulator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["cargo"] }
delaunator = "1.0.2"
image = "0.25.5"
ndarray = "0.16.1"
ndarray-conv = "0.4.1"
ndarray-rand = "0.15.0"
ordered-float = "5.0.0"
priority-queue = "2.2.2"
rand = "0.9.0"
